tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/int_in_bool_list/int_in_bool_list.essence
letting x be 5
find y : bool
such that or([x, y])